--- a/Kinovea.ScreenManager/Languages/ScreenManagerLang.zh-Hant.resx
+++ b/Kinovea.ScreenManager/Languages/ScreenManagerLang.zh-Hant.resx
@@ -1426,4 +1426,25 @@
   <data name="FormTimeSections_Tag" xml:space="preserve">
     <value>標籤</value>
   </data>
+  <data name="variable_CameraAlias" xml:space="preserve">
+    <value>相機別名</value>
+  </data>
+  <data name="variable_Year" xml:space="preserve">
+    <value>年</value>
+  </data>
+  <data name="variable_Seconds" xml:space="preserve">
+    <value>秒</value>
+  </data>
+  <data name="variable_ReceivedFrameRate" xml:space="preserve">
+    <value>接收幀率</value>
+  </data>
+  <data name="variable_Month" xml:space="preserve">
+    <value>月</value>
+  </data>
+  <data name="variable_Day" xml:space="preserve">
+    <value>日</value>
+  </data>
+  <data name="variable_Minutes" xml:space="preserve">
+    <value>分鐘</value>
+  </data>
 </root>
