--- a/Kinovea.ScreenManager/Languages/ScreenManagerLang.cs.resx
+++ b/Kinovea.ScreenManager/Languages/ScreenManagerLang.cs.resx
@@ -1094,4 +1094,25 @@
   <data name="dlgCalibrateLine_AxisVertical" xml:space="preserve">
     <value>Čára vymezuje svislou osu</value>
   </data>
+  <data name="variable_CameraAlias" xml:space="preserve">
+    <value>Alias pro fotoaparát</value>
+  </data>
+  <data name="variable_Year" xml:space="preserve">
+    <value>Rok</value>
+  </data>
+  <data name="variable_Seconds" xml:space="preserve">
+    <value>Sekunda</value>
+  </data>
+  <data name="variable_ReceivedFrameRate" xml:space="preserve">
+    <value>Přijatá snímková frekvence</value>
+  </data>
+  <data name="variable_Month" xml:space="preserve">
+    <value>Měsíc</value>
+  </data>
+  <data name="variable_Day" xml:space="preserve">
+    <value>Den</value>
+  </data>
+  <data name="variable_Minutes" xml:space="preserve">
+    <value>Minuta</value>
+  </data>
 </root>
